--- a/gradle.properties
+++ b/gradle.properties
@@ -9,11 +9,13 @@ yarn_mappings=1.21+build.9
 loader_version=0.16.9
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.1.0
 maven_group=io.github.maloryware.agros_fancy_fixes
 archives_base_name=agros-fancy-fixes
 
 # Dependencies
 fabric_version=0.102.0+1.21
+midnight_lib=1.6.3-fabric
 better_enchanting=0.8.0
 dungeons_and_taverns=v4.4.3+mod
+mixson=v0.1.0-fabric
