--- a/gradle.properties
+++ b/gradle.properties
@@ -5,17 +5,17 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21
-yarn_mappings=1.21+build.9
-loader_version=0.16.9
+yarn_mappings=1.21+build.1
+loader_version=0.16.10
 
 # Mod Properties
-mod_version=1.2.1
+mod_version=1.3.1
 maven_group=io.github.maloryware.agros_fancy_fixes
 archives_base_name=agros-fancy-fixes
 
 # Dependencies
 fabric_version=0.102.0+1.21
-midnight_lib=1.6.3-fabric
+midnight_lib=1.6.7+1.21.1-fabric
 better_enchanting=0.8.0
 dungeons_and_taverns=v4.4.3+mod
 mixson=v0.1.0-fabric
